--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "uuid": "^9.0.0",
     "dotenv": "^16.3.1",
-    "google-auth-library": "^9.0.0"
+    "google-auth-library": "^9.0.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
