--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "uuid": "^9.0.0",
     "dotenv": "^16.3.1",
     "google-auth-library": "^9.0.0",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
