--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start:prod": "NODE_ENV=production node server.js",
+    "migrate": "node scripts/migrate-database.js",
+    "seed": "node scripts/seed-database.js",
+    "db:init": "node scripts/init-database.js",
+    "db:backup": "bash scripts/backup-database.sh",
+    "db:restore": "bash scripts/restore-database.sh",
+    "db:setup": "bash scripts/setup-postgres-docker.sh"
   },
   "dependencies": {
     "express": "^4.18.2",
