--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,14 @@
     "db:setup": "bash scripts/setup-postgres-docker.sh"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "uuid": "^9.0.0",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "google-auth-library": "^9.0.0",
+    "multer": "^2.0.2",
     "nodemailer": "^6.9.7",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
