--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hcaptcha/react-hcaptcha": "^2.0.2",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.2",
     "react": "^18.2.0",
