--- a/backend/package.json
+++ b/backend/package.json
@@ -15,13 +15,17 @@
     "db:setup": "bash scripts/setup-postgres-docker.sh"
   },
   "dependencies": {
+    "bull": "^4.11.5",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "google-auth-library": "^9.0.0",
     "multer": "^2.0.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "pg": "^8.11.3",
+    "redis": "^4.6.12",
+    "socket.io": "^4.7.2",
     "sqlite3": "^5.1.7",
     "uuid": "^9.0.0"
   },
