--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,111 @@
 version: '3.8'
 
 services:
-  backend:
+  # PostgreSQL Database
+  postgres:
+    image: postgres:15-alpine
+    container_name: concert-postgres
+    environment:
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
+      POSTGRES_DB: ${DB_NAME:-concert_ticket_system}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+      - ./backend/database/init.sql:/docker-entrypoint-initdb.d/init.sql
+    ports:
+      - "5432:5432"
+    networks:
+      - concert-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Redis Cache & Pub/Sub
+  redis:
+    image: redis:7-alpine
+    container_name: concert-redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - redis_data:/data
+    networks:
+      - concert-network
+    command: redis-server --appendonly yes
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  # Backend API Server Instance 1
+  backend-1:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    container_name: concert-backend
-    ports:
-      - "5000:5000"
+    container_name: concert-backend-1
     environment:
-      - NODE_ENV=production
-      - PORT=5000
-    restart: unless-stopped
+      NODE_ENV: ${NODE_ENV:-production}
+      PORT: 5000
+      DATABASE_URL: postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-concert_ticket_system}
+      REDIS_URL: redis://redis:6379
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    ports:
+      - "5001:5000"
     networks:
       - concert-network
+    restart: unless-stopped
 
+  # Backend API Server Instance 2  
+  backend-2:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    container_name: concert-backend-2
+    environment:
+      NODE_ENV: ${NODE_ENV:-production}
+      PORT: 5000
+      DATABASE_URL: postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-postgres}@postgres:5432/${DB_NAME:-concert_ticket_system}
+      REDIS_URL: redis://redis:6379
+      FRONTEND_URL: ${FRONTEND_URL:-http://localhost}
+      EMAIL_USER: ${EMAIL_USER}
+      EMAIL_PASSWORD: ${EMAIL_PASSWORD}
+    depends_on:
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+    ports:
+      - "5002:5000"
+    networks:
+      - concert-network
+    restart: unless-stopped
+
+  # Nginx Load Balancer & Reverse Proxy
+  nginx:
+    image: nginx:alpine
+    container_name: concert-nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend-1
+      - backend-2
+    networks:
+      - concert-network
+    restart: unless-stopped
+
+  # Frontend
   frontend:
     build:
       context: ./frontend
@@ -23,14 +114,17 @@ services:
     ports:
       - "3000:80"
     depends_on:
-      - backend
-    restart: unless-stopped
+      - nginx
     networks:
       - concert-network
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
+    driver: local
+  redis_data:
+    driver: local
 
 networks:
   concert-network:
     driver: bridge
-
-volumes:
-  concert-data:
