--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production node server.js",
+    "start:railway": "NODE_ENV=production node server.js",
     "migrate": "node scripts/migrate-database.js",
     "seed": "node scripts/seed-database.js",
     "db:init": "node scripts/init-database.js",
