--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,13 +6,17 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --production
 
 # Copy source code
 COPY . .
 
-# Expose port
-EXPOSE 5000
+# Expose port (Railway uses PORT env var)
+EXPOSE 8080
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+  CMD node -e "require('http').get('http://localhost:8080/api/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})" || exit 1
 
 # Start application
-CMD ["npm", "start"]
+CMD ["npm", "run", "start:railway"]
