--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,8 @@
+# Backend API Configuration
+# Development: http://localhost:5000 (local backend)
+# Production: https://your-api.railway.app (Railway backend)
+VITE_API_BASE_URL=http://localhost:5000
+
 # Google Auth Configuration
 # Get your Google Client ID from https://console.cloud.google.com/
 VITE_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
@@ -10,7 +15,3 @@ VITE_GOOGLE_CLIENT_ID=YOUR_GOOGLE_CLIENT_ID_HERE
 #
 # Production: Replace with your actual Site Key from Cloudflare dashboard
 VITE_TURNSTILE_SITE_KEY=YOUR_PRODUCTION_TURNSTILE_SITE_KEY_HERE
-
-# Backend Configuration (Optional)
-# Secret Key for backend token verification (keep this secret!)
-# CLOUDFLARE_TURNSTILE_SECRET_KEY=YOUR_SECRET_KEY_HERE
