--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:18-alpine
 
-# Force rebuild - 2026-02-09 CORS Fix
 WORKDIR /app
 
 # Copy package files
@@ -18,6 +17,8 @@ EXPOSE 8080
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:8080/api/health', (r) => {if (r.statusCode !== 200) throw new Error(r.statusCode)})" || exit 1
+
+CMD ["node", "server.js"]
 
 # Start application
 CMD ["npm", "run", "start:railway"]
