--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -4,7 +4,15 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    include /etc/nginx/mime.types;
+
     location / {
         try_files $uri $uri/ /index.html;
+    }
+
+    location /assets/ {
+        expires 1y;
+        add_header Cache-Control "public";
+        access_log off;
     }
 }
