Fix nginx config missing mime.types

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,32 +1,19 @@
 server {
     listen 80;
     server_name localhost;
+
+    include /etc/nginx/mime.types;
+
     root /usr/share/nginx/html;
     index index.html;
 
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-
-    # Gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # SPA: Route all requests to index.html except static assets
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets with hash in filename
     location /assets/ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
+        add_header Cache-Control "public";
         access_log off;
-    }
-
-    # Don't cache HTML
-    location = /index.html {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
     }
 }
