--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,12 @@ WORKDIR /app
 # Accept build arguments
 ARG VITE_API_BASE_URL=https://concert-booking-production.railway.app
 ARG VITE_GOOGLE_CLIENT_ID=
+ARG VITE_TURNSTILE_SITE_KEY=
 
 # Set environment variables for build
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 ENV VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID
+ENV VITE_TURNSTILE_SITE_KEY=$VITE_TURNSTILE_SITE_KEY
 
 # Copy package files
 COPY package*.json ./
