--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,11 +21,15 @@ RUN npm install
 # Copy source code
 COPY . .
 
-# Build application with explicit environment variables
-RUN VITE_API_BASE_URL=$VITE_API_BASE_URL \
-    VITE_GOOGLE_CLIENT_ID=$VITE_GOOGLE_CLIENT_ID \
-    VITE_TURNSTILE_SITE_KEY=$VITE_TURNSTILE_SITE_KEY \
-    npm run build
+# Create .env.production file with build variables for Vite
+RUN echo "VITE_API_BASE_URL=${VITE_API_BASE_URL}" > .env.production && \
+    echo "VITE_GOOGLE_CLIENT_ID=${VITE_GOOGLE_CLIENT_ID}" >> .env.production && \
+    echo "VITE_TURNSTILE_SITE_KEY=${VITE_TURNSTILE_SITE_KEY}" >> .env.production && \
+    echo "=== .env.production contents ===" && \
+    cat .env.production
+
+# Build application
+RUN npm run build
 
 # Production stage
 FROM nginx:alpine
